# flightAPI

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  dev.env  docker-compose.yml  pyproject.toml
src/: alembic.ini  dev.env  main.py
src/alembic/: env.py
src/alembic/versions/: 4d8bb5a5dbd5_initial_migration.py  abf0e3cc6eeb_initial_migration.py  acbeba4557ec_initial_migration.py
src/api/: __init__.py
src/api/v1/: __init__.py  flight.py
src/config/: settings.py
src/data/: load_data.py  seed.json
src/dependencies/: repository.py  services.py
src/exceptions/: flight.py  location.py
src/infrastructure/: db.py
src/models/: __init__.py  flight.py  location.py
src/repository/: flight.py  location.py
src/schemas/: flight.py  location.py
src/scripts/: insert_flights.py  insert_locations.py
src/services/: flight.py  location.py
src/tests/: conftest.py  test_flight_endpoint.py
